--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -594,3 +594,18 @@ a.skip {
 	position: absolute;
 	left: -9999px;
 }
+
+
+#chat-window {
+	height: 200px;
+	width: 500px;
+	border: 1px solid black;
+	margin-top: 1em;
+	overflow: auto;
+}
+
+#chat-input {
+	width: 500px;
+	margin-top: 1em;
+	border: 1px solid black;
+}
